# XJTU-RMV-Task04

./: .gitignore  README.md  任务.md
hik_camera_driver/: CMakeLists.txt
hik_camera_driver/.cache/clangd/index/: CameraParams.h.EDA94AB966CA6E93.idx  MvCameraControl.h.E749CC5B64616A00.idx  MvISPErrorDefine.h.612927DFC3E94424.idx  fps_monitor_node.cpp.26250B4D4ED593C3.idx  hik_camera_driver.hpp.96055E92462A4301.idx  hik_camera_node.cpp.4169CD716E4AE812.idx  mvs_sdk_wrapper.cpp.B61A02F93A2FB76F.idx  param_info_node.cpp.925E0D51CCD778AF.idx
hik_camera_driver/config/: camera_params.yaml
hik_camera_driver/include/hik_camera_driver/: hik_camera_driver.hpp
hik_camera_driver/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
hik_camera_driver/install/hik_camera_driver/include/hik_camera_driver/: mvs_sdk_wrapper.hpp
hik_camera_driver/install/hik_camera_driver/lib/hik_camera_driver/: hik_camera_node  param_info_node
hik_camera_driver/install/hik_camera_driver/share/hik_camera_driver/: local_setup.dsv  package.bash  package.ps1  package.sh
hik_camera_driver/install/hik_camera_driver/share/hik_camera_driver/config/: camera_params.yaml
hik_camera_driver/install/hik_camera_driver/share/hik_camera_driver/launch/: complete_system.launch.py  hik_camera.launch.py  hik_camera_with_rviz.launch.py
hik_camera_driver/launch/: hik_camera_system.launch.py
hik_camera_driver/log/: latest_build
hik_camera_driver/scripts/: camera_manager.sh
hik_camera_driver/src/: fps_monitor_node.cpp  hik_camera_node.cpp  mvs_sdk_wrapper.cpp  param_info_node.cpp
install/: local_setup.sh  setup.sh
install/hik_camera_driver/include/hik_camera_driver/: hik_camera_driver.hpp
install/hik_camera_driver/lib/hik_camera_driver/: hik_camera_node  param_info_node
install/hik_camera_driver/share/hik_camera_driver/: package.dsv  package.sh  package.zsh
install/hik_camera_driver/share/hik_camera_driver/config/: camera_display.rviz  camera_params.yaml
install/hik_camera_driver/share/hik_camera_driver/launch/: hik_camera_system.launch.py
log/: latest_build
test_bag/: metadata.yaml
